bakkie_derive/tests/ui/fail/tool_on_sync_function_with_args.rs
use bakkie_derive::tool;

#[tool(name = "sync_tool", description = "A sync tool")]
fn sync_with_args(param: String, count: u32) -> String {
    format!("{}: {}", param, count)
}

fn main() {}