bakkie_derive/tests/ui/fail/tool_on_sync_function_with_args.stderr
error: #[tool] can only be used on async functions
 --> tests/ui/fail/tool_on_sync_function_with_args.rs:4:4
  |
4 | fn sync_with_args(param: String, count: u32) -> String {
  |    ^^^^^^^^^^^^^^
